# CEO-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  tailwind.config.js
.cursor/rules/: ci-pre-commit.mdc  runtime-authority-core.mdc
.github/workflows/: rrm1-gate.yml
agents/: ceo_agent.py  cfo_agent.py  cmo_agent.py  coo_agent.py  cto_agent.py  expanded.py  factory.py
api/: adaptive.py  auth.py  diagnostics.py  main.py  sessions.py
core/: adaptive_context.py  adaptive_governance.py  adaptive_persist.py  adaptive_policy.py  adaptive_signals.py  agent_registry.py  agent_runner.py  approval_service.py  cache.py  canonical.py  cognition_loops.py  cognition_metrics.py  cognitive_budget.py  confidence.py  config.py  context.py  context_lifecycle.py  context_priority.py  delegation_policy.py  diagnostics.py  frozen_replay_executor.py  governance_store.py  health.py  intelligence_persist.py  intelligence_store.py  live_replay_adapter.py  mcp_security.py  orchestrator.py  permissions.py  persistence.py  policy.py  preprocessor.py  prompt_lineage.py  rbac.py  replay.py  replay_analytics.py  replay_diff.py  replay_errors.py  replay_policy.py  replay_store.py  (+18 more)
core/telemetry/: __init__.py  otel.py
demo/: degraded_session.json  deployment_review.json  founder_strategy.json  incident_response.json
docs/: MVP1_DEMO.md  RRM1.5.md  RRM1.md  RRM2.1.md  RRM2.md  RRM3.md  runtime_invariants.md
experimental/agents/: expanded.py
prompts/: ceo_agent_v1.md  cfo_agent_v1.md  cmo_agent_v1.md  coo_agent_v1.md  cto_agent_v1.md
prompts/crisis/: infrastructure_v1.md
schemas/: __init__.py  adaptive.py  approvals.py  cognition.py  context.py  crisis.py  decisions.py  diagnostics.py  effects.py  governance_runtime.py  health.py  messages.py  replay.py  runtime.py  runtime_health.py  session_summary.py  spans.py  tools.py  world.py
schemas/responses/: __init__.py  base.py
scripts/: ci-local.sh  rrm1_gate_report.py  seed_demo.py
tests/: conftest.py
tests/experimental/: test_expanded_disabled.py
tools/: normalizer.py  registry.py  retry.py  router.py
ui/: deps.py  templates_env.py
workers/: outbox_processor.py
(+75 files in other folders)
