[project]
name = "ceo-agent"
version = "0.1.0"
description = "Enterprise Cognitive Operating System"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-prometheus>=0.52b0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "rrm15: RRM-1.5 Replay Integrity gate (SPEC-RRM1.5)",
    "rrm2: RRM-2 Runtime Intelligence gate (SPEC-RRM2)",
    "rrm21: RRM-2.1 Intelligence Reliability Hardening gate",
    "rrm3: RRM-3 Adaptive Cognition Runtime gate",
    "postgres: requires DATABASE_URL and Postgres (skipped locally if unavailable)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "core.telemetry", "schemas", "tools", "workers", "experimental"]
